[package]
name = "kaspa-sdk"
version = "0.2.0"
edition = "2024"
authors = ["happyboy <superhappyboy1995@gmail.com>"]
description = "A fully functional implementation SDK for the Kaspa Network, covering most of the functionality that interoperates with the Kaspa Network."
keywords = ["trade", "crypto", "pow", "kaspa", "blockchain"]
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/0xhappyboy/kaspa-sdk"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
hex = "0.4"
base64 = "0.21"
futures = "0.3"
async-trait = "0.1"
log = "0.4"
chrono = "0.4.42"
tokio-tungstenite = "0.20"
tungstenite = "0.20"
futures-util = "0.3"
secp256k1 = { version = "0.27", features = ["rand"] }
bech32 = "0.9"
sha2 = "0.10"
ripemd = "0.1"
base58 = "0.2"
blake3 = "1.8.2"
bs58 = "0.5.1"
